Cupom resolution